# python.nvim

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  lazy.lua
.github/workflows/: lint.yaml  tag-action.yaml  tests.yaml
doc/: python.txt  tags
examples/python_projects/pip_pyproject/: pyproject.toml
examples/python_projects/pip_requirements/: script.py
examples/python_projects/poetry/: main.py  pyproject.toml
examples/python_projects/pytest/: pyproject.toml  test_example.py  test_example_2.py
examples/python_projects/uv/: main.py  pyproject.toml
examples/python_projects/uv/uv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/python_projects/uv_script/: uv-script.py
lua/lualine/components/: python.lua
lua/python/: commands.lua  config.lua  init.lua  keymap.lua
lua/python/dap/: init.lua
lua/python/hatch/: commands.lua  init.lua
lua/python/lsp/: commands.lua  init.lua
lua/python/snip/: init.lua
lua/python/state/: init.lua
lua/python/test/: init.lua
lua/python/treesitter/: commands.lua  init.lua  nodes.lua
lua/python/ui/: init.lua
lua/python/uv/: commands.lua  init.lua
scripts/: minimal_init.lua
tests/: _test_template.lua  test_config.lua  test_detect.lua  test_interpreters.lua  test_keymap.lua  test_luasnip.lua  test_text_actions.lua  test_treesitter.lua  test_uv.lua  test_venv_create.lua
